# clamui-tde

./: CMakeLists.txt  README.md  build.sh  build_deb.sh  tmp.cmake
data/: tdeclamui.desktop
libs/concurrent/: README.md  tqtconcurrent.cpp
libs/concurrent/example/: README.md  main.cpp
libs/http/: README.md  tqtnetwork.cpp  tqtnetwork.h
libs/http/example/: README.md  main.cpp  main.moc  moc_tqtnetwork.cpp  tqthttp_example
libs/json/: README.md
libs/json/example/: README.md  main.cpp  tqtjson_example
libs/process/: README.md  tqtprocess.cpp  tqtprocess.h
libs/process/example/: main.cpp
libs/serializer/: tqtabstractserializer.cpp  tqtabstractserializer.h  tqtbinaryserializer.cpp  tqtbinaryserializer.h  tqtsqlserializer.cpp  tqtsqlserializer.h  tqtstringserializer.cpp  tqtstringserializer.h
libs/tqt-charts/: README.md  tqtabstractchartwidget.cpp  tqtabstractchartwidget.h  tqtbarchartwidget.cpp  tqtbarchartwidget.h  tqtcharts_common.h  tqtheatmapwidget.cpp  tqtheatmapwidget.h  tqtmosaicplotwidget.cpp  tqtmosaicplotwidget.h  tqtpiecechartwidget.cpp  tqtpiecechartwidget.h  tqtscatterplotwidget.cpp  tqtscatterplotwidget.h  tqtstackedbarchartwidget.cpp  tqtstackedbarchartwidget.h  tqtwafflechartwidget.cpp  tqtwafflechartwidget.h
libs/tqt-charts/example/: main.cpp
scripts/: gen_embedded_icons.sh
src/: CMakeLists.txt  clamui_app.cpp  clamui_app.h  embedded_icons.h  main.cpp  tray.cpp  tray.h
src/core/: clamav_detection.cpp  clamav_detection.h  headless_scanner.cpp  headless_scanner.h  log_manager.cpp  log_manager.h  notification_manager.cpp  notification_manager.h  profiles.cpp  profiles.h  quarantine_manager.cpp  quarantine_manager.h  scanner.cpp  scanner.h  scheduler.cpp  scheduler.h  settings_manager.cpp  settings_manager.h  statistics.cpp  statistics.h  system_audit.cpp  system_audit.h  threat_classifier.cpp  threat_classifier.h  unofficial_sigs.cpp  unofficial_sigs.h  updater.cpp  updater.h  virustotal.cpp  virustotal.h
src/ui/: about_dialog.cpp  about_dialog.h  audit_view.cpp  audit_view.h  components_view.cpp  components_view.h  icon_utils.h  logs_view.cpp  logs_view.h  mainwindow.cpp  mainwindow.h  profile_dialogs.cpp  profile_dialogs.h  quarantine_view.cpp  quarantine_view.h  scan_results_dialog.cpp  scan_results_dialog.h  scan_view.cpp  scan_view.h  sidebar.cpp  sidebar.h  statistics_view.cpp  statistics_view.h  update_view.cpp  update_view.h
src/ui/preferences/: behavior_page.cpp  behavior_page.h  database_page.cpp  database_page.h  debug_page.cpp  debug_page.h  exclusions_page.cpp  exclusions_page.h  prefs_dialog.cpp  prefs_dialog.h  scanner_page.cpp  scanner_page.h  scheduled_page.cpp  scheduled_page.h  virustotal_page.cpp  virustotal_page.h
